ShrinkToFit() all the DFA's vectors when we no longer need to add new nodes to it https://bugs.webkit.org/show_bug.cgi?id=147341

Patch by Benjamin Poulain <bpoulain@apple.com> on 2015-07-27
Reviewed by Geoffrey Garen.

Add a finalizer to the DFA to reduce the total memory needed
to store it.

On real test lists, this cuts the peak memory usage by about 1 megabyte.

The NFA already had a finalizer, no need to modify that one.

* contentextensions/DFA.cpp:
(WebCore::ContentExtensions::DFA::finalize):
* contentextensions/DFA.h:
* contentextensions/NFAToDFA.cpp:
(WebCore::ContentExtensions::NFAToDFA::convert):


Canonical link: https://commits.webkit.org/165430@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187467 268f45cc-cd09-0410-ab3c-d52691b4dbfc